# NER_Fine_Tuning

./: .gitignore  README.md
.github/workflows/: cicd.yml
ner-model/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
ner-model/data/: classification_report.txt  id2label.json  label2id.json
ner-model/data/lora_model/: README.md  adapter_config.json
ner-model/k8s/: api-deployment.yaml  api-service.yaml
ner-model/ner_model/: main.py  model_inference.py  preprocess_raw_data.py  run_api.py  run_inference.py  run_ner_training.py  run_training.py  static.yaml  train_model.py
ner-model/ner_model/data_utils/: build_dataloader.py  preprocess_raw_data.py  utils.py
ner-model/ner_model/model_utils/: inference.py  validation.py
ner-model/src/: run_api.py  run_inference.py  run_training.py  static.yaml
ner-model/src/data_utils/: preprocess_raw_data.py  utils.py
ner-model/src/inference/main/: run_api.py  run_inference.py  run_lora_api.py  run_lora_inference.py
ner-model/src/main/fine_tune/: run_api.py  run_inference.py  run_training.py
ner-model/src/main/lora/: run_lora_api.py  run_lora_inference.py  run_lora_training.py
ner-model/src/model_utils/: base_inference.py  base_training.py  inference.py  training.py
ner-model/src/training/: utils.py
ner-model/src/training/main/: run_lora_training.py  run_training.py
notebooks/: Custom_Named_Entity_Recognition_with_BERT.ipynb
