[tool.poetry]
name = "ner-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
numpy = "1.26.0"
pandas = "2.1.1"
PyYAML = "6.0.1"
torch = "2.1.0"
transformers = "4.34.0"
scikit-learn = "1.3.2"
seqeval = "1.2.2"
argparse = "1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
